@@ -1,3 +1,6 @@
+2013-03-01  Ugo Pattacini <ugo.pattacini@iit.it>
+    * src/libYARP_dev/include/yarp/dev/GazeControl.h: added possibility to block eyes too
+
 2013-02-15  Alessandro Scalzo <alessandro.scalzo@iit.it>
     * src/libYARP_dev/include/yarp/dev/IVirtualAnalogSensor.h
 
